change operationId `addFolderBackup` to `runFolderBackup`
